[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-issue-tracker"
version = "1.0.0"
description = "A real world simulated bug tracking and issue triage system for OpenEnv"
authors = [
    { name = "Developer" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic==2.6.1",
    "openai==1.12.0",
    "requests==2.31.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]
